--- a/carstore/src/main/resources/templates/offers.html
+++ b/carstore/src/main/resources/templates/offers.html
@@ -29,17 +29,17 @@
                 </div>
                 <div class="card-body pb-1">
                     <h5 class="card-title">
-                        <th:block th:text="*{year}"></th:block>
-                        <th:block th:text="*{brand}"></th:block>
-                        <th:block th:text="*{model}"></th:block>
+                        <th:block th:text="*{year}">year</th:block>
+                        <th:block th:text="*{brand}">brand</th:block>
+                        <th:block th:text="*{model}">model</th:block>
 					</h5>
                 </div>
                 <ul class="offer-details list-group list-group-flush">
                     <li class="list-group-item">
-                        <div class="card-text"><span>• Mileage <th:block th:text="*{mileage}"></th:block></span></div>
-                        <div class="card-text"><span>• Price <th:block th:text="*{price}"></th:block></span></div>
-                        <div class="card-text"><span>• Engine type <th:block th:text="*{engine}"></th:block></span></div>
-                        <div class="card-text"><span>• Transmission type <th:block th:text="*{transmission}"></th:block></span></div>
+                        <div class="card-text"><span>• Mileage <th:block th:text="*{mileage}">mileage</th:block></span></div>
+                        <div class="card-text"><span>• Price <th:block th:text="*{price}">price</th:block></span></div>
+                        <div class="card-text"><span>• Engine type <th:block th:text="*{engine}">engine</th:block></span></div>
+                        <div class="card-text"><span>• Transmission type <th:block th:text="*{transmission}">transmission</th:block></span></div>
                     </li>
                 </ul>
                 <div class="card-body">
