--- a/carstore/src/main/resources/templates/fragments/navbar.html
+++ b/carstore/src/main/resources/templates/fragments/navbar.html
@@ -24,28 +24,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto col-12 justify-content-between">
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/offers/search" th:text="#{navbar_search}">Search</a>
+                    <a class="nav-link" th:href="@{/offers/search}" th:text="#{navbar_search}">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/brands/all" th:text="#{navbar_all_brands}">All Brands</a>
+                    <a class="nav-link" th:href="@{/brands/all}" th:text="#{navbar_all_brands}">All Brands</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/offers/add" th:text="#{navbar_add_offer}">Add Offer</a>
+                    <a class="nav-link" th:href="@{/offers/add}" th:text="#{navbar_add_offer}">Add Offer</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/offers/all" th:text="#{navbar_all_offers}">All Offers</a>
+                    <a class="nav-link" th:href="@{/offers/all}" th:text="#{navbar_all_offers}">All Offers</a>
                 </li>
-                <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
-                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Admin
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/">Action</a>
-                        <a class="dropdown-item" href="/">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/">Something else here</a>
-                    </div>
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link" th:href="@{/users/admin/view}" th:text="#{navbar_admin}">Admin</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('MODERATOR')">
+                    <a class="nav-link" href="" th:text="#{navbar_moderator}">Moderator</a>
                 </li>
                 <th:block sec:authorize="isAuthenticated()">
                 <li class="nav-item">
