--- a/carstore/src/main/resources/templates/email/registration.html
+++ b/carstore/src/main/resources/templates/email/registration.html
@@ -13,5 +13,6 @@
 <th:block th:text="#{registration_user(${username})}">Dear KikiRki</th:block>
 <p th:text="#{registration_congratulate}">We are happy that you are part of our community now!</p>
 <th:block th:text="#{registration_regards}">Best regards CarStore!</th:block>
+<h3><a th:href="${link}">VERIFY</a></h3>
 </body>
 </html>
