--- a/carstore/src/main/resources/templates/auth-login.html
+++ b/carstore/src/main/resources/templates/auth-login.html
@@ -50,7 +50,8 @@
         <p th:if="${bad_credentials}" class="errors alert alert-danger">
             Invalid username or password.
         </p>
-
+        <div class="pass">
+        <a th:href="@{/users/forgot}">Forgot Password?</a></div>
         <div class="row">
             <div class="col col-md-4">
                 <div class="button-holder d-flex">
